tests/unterminated_expression1.c.t.exp
unterminated_expression1.c.t:1:2: error: Unterminated {{

{{
  ^

